globus-common (15.21-1+gt6.@distro@) @distro@; urgency=low

  * Time-related fixes on windows

 -- Globus Toolkit <support@globus.org>  Wed, 07 May 2014 11:15:02 -0456

globus-common (15.20-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 23 Apr 2014 13:57:42 -0400

globus-common (15.19-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 23 Apr 2014 13:01:02 -0400

globus-common (15.18-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 23 Apr 2014 09:44:17 -0400

globus-common (15.17-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Sat, 19 Apr 2014 16:23:08 -0400

globus-common (15.16-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:31 -0400

globus-common (15.15-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:58 -0400

globus-common (15.15-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:43 -0500

globus-common (15.14-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 13:25:37 -0500

globus-common (15.13-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 13:25:19 -0500

globus-common (15.13-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 20:03:16 -0500

globus-common (15.12-1+gt6.@distro@) @distro@; urgency=low

  * Don't depend on finding initializer/args parser

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 15:34:37 -0500
