@@ -1,3 +1,9 @@
+globus-common (15.22-1+gt6.@distro@) @distro@; urgency=low
+
+  * Use globus_libc_[un]setenv
+
+ -- Globus Toolkit <support@globus.org>  Fri, 23 May 2014 15:46:04 -0400
+
 globus-common (15.21-1+gt6.@distro@) @distro@; urgency=low
 
   * Time-related fixes on windows
